# srtgo

./: .dockerignore  .env.docker  .gitignore  ANALYSIS_INDEX.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  INQUIRY_ANALYSIS.txt  INQUIRY_USAGE_MAP.txt  MIGRATION_PLAN.md  README.md  TESTING_REPORT.md  WEB_MIGRATION_GUIDE.md  api.md  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  docker-run.sh  plan.md  pyproject.toml
backend/: .env.example  README.md  main.py  requirements.txt
backend/api/: __init__.py  auth.py  credentials.py  reservations.py  trains.py
backend/core/: __init__.py  config.py  dependencies.py  security.py
backend/models/: __init__.py  credential.py  database.py  reservation.py  user.py
backend/schemas/: __init__.py  credential.py  reservation.py  user.py
backend/services/: __init__.py  reservation_service.py  train_service.py
frontend/: README.md  index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  ReservationPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts  (+1 more)
srtgo/: core.py  ktx.py  srt.py
srtgo-web/: README.md  START_GUIDE.md  docker-compose.dev.yml  docker-compose.yml
srtgo-web/backend/: .dockerignore  .env.example  Dockerfile  requirements.txt  test_main.py
srtgo-web/frontend/: Dockerfile  nginx.conf  package.json  tsconfig.json
tests/: test_core.py  test_webapp.py
webapp/: app.py
webapp/static/: index.html  main.js  style.css  sw.js
(+54 files in other folders)
