[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srtgo"
authors = [
    {name = "DKim", email = "lapis42@gmail.com"},
]
description = "SRTgo: K-Train Reservation Helper"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "curl_cffi",
    "inquirer>=3.4",
    "keyring",
    "PyCryptodome",
    "prompt_toolkit>=3",
    "python-telegram-bot",
    "termcolor",
    "flask",
    "flasgger"
]
optional-dependencies = { dev = ["pytest"] }
dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/lapis42/srtgo"

[project.scripts]
srtgo = "srtgo.srtgo:srtgo"
srtgo-web = "webapp.app:main"

# 🔧 패키지 경로 명시
[tool.setuptools.packages.find]
include = ["srtgo", "webapp"]
